# core

./: .gitattributes  .gitignore  .gitsvnextmodules  .travis.yml  3DPARTY.md  CHANGELOG.md  Makefile  Readme.md
ASCOfficeHtmlFile/SDK/html2xhtml/src/: Makefile.am  dtd.h  dtd_names.h  dtd_util.c  htmlgr.c  mensajes.c  mensajes.h  procesador.c  tree.c  xchar.c  xchar.h
AVSOfficeVirtualPrinter/AVSOfficePostScript/Source/ijs/: Makefile.am  README  autogen.sh  common.mak  configure.ac  ijs-config.1  ijs-config.in  ijs.c  ijs.h  ijs.pc.in  ijs_client.c  ijs_client.h  ijs_client_example.c  ijs_exec_unix.c  ijs_exec_win.c  ijs_server.c  ijs_server.h  ijs_server_example.c  ijs_spec.ps  ijs_spec.sgml  state.eps  state.fig  unistd_.h  unix.mak  windows.mak
DesktopEditor/xmlsec/xmlsec/: AUTHORS  ChangeLog  Copyright  HACKING  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  config.h.in  configure  configure.ac  xmlsec-config.in  xmlsec-gcrypt.pc.in  xmlsec-gnutls.pc.in  xmlsec-nss.pc.in  xmlsec-openssl.pc.in  xmlsec.pc.in  xmlsec.spec.in  xmlsec1-config  xmlsec1-gcrypt.pc  xmlsec1-gnutls.pc  xmlsec1-nss.pc  xmlsec1-openssl.pc  xmlsec1.m4  xmlsec1.pc  xmlsec1.spec  xmlsec1Conf.sh  xmlsecConf.sh.in
DesktopEditor/xmlsec/xmlsec/apps/: Makefile.am  Makefile.in  cmdline.c  cmdline.h  crypto.c  crypto.h  xmlsec.c
DesktopEditor/xmlsec/xmlsec/docs/: Makefile.am  Makefile.in  authors.html  bugs.html  c14n.html  documentation.html  download.html  faq.html  index.html  news.html  related.html  xmldsig-verifier.html  xmldsig.html  xmlenc.html  xmlsec-man.html  xmlsec.xsl
DesktopEditor/xmlsec/xmlsec/docs/api/: Makefile.am  Makefile.in  index.html  xmlsec-app.html  xmlsec-base64.html  xmlsec-bn.html  xmlsec-buffer.html  xmlsec-custom-keys-manager.html  xmlsec-decrypt-with-keys-mngr.html  xmlsec-decrypt-with-signle-key.html  xmlsec-dl.html  xmlsec-encrypt-dynamic-template.html  xmlsec-encrypt-template-file.html  xmlsec-encrypt-with-session-key.html  xmlsec-encryption-klasses.html  (+93 more)
DesktopEditor/xmlsec/xmlsec/examples/: Makefile  Makefile.w32  README  decrypt1.c  decrypt2.c  decrypt3.c  encrypt1-res.xml  encrypt1-tmpl.xml  encrypt1.c  encrypt2-doc.xml  encrypt2-res.xml  encrypt2.c  encrypt3-doc.xml  encrypt3-res.xml  encrypt3.c  mywin32make.bat  rsakey.pem  rsapub.pem  sign1-res.xml  sign1-tmpl.xml  sign1.c  sign2-doc.xml  sign2-res.xml  sign2.c  sign3-doc.xml  sign3-res.xml  sign3.c  verify1.c  verify2.c  verify3.c  verify4-bad-res.xml  verify4-bad-tmpl.xml  verify4-res.xml  verify4-tmpl.xml  verify4.c  xmldsigverify.c
DesktopEditor/xmlsec/xmlsec/include/: Makefile.am  Makefile.in
DesktopEditor/xmlsec/xmlsec/man/: Makefile.am  Makefile.in  xmlsec1-config.1  xmlsec1.1
DesktopEditor/xmlsec/xmlsec/scripts/: build_release.sh  change-release.sh  push_release.sh  remove-gtkdoclink.pl  test_errors.pl  test_release.sh
DesktopEditor/xmlsec/xmlsec/src/: Makefile.am  Makefile.in  app.c  base64.c  bn.c  buffer.c  c14n.c  dl.c  enveloped.c  errors.c  globals.h  io.c  keyinfo.c  keys.c  keysdata.c  keysmngr.c  kw_aes_des.c  kw_aes_des.h  list.c  membuf.c  nodeset.c  parser.c  relationship.c  soap.c  strings.c  templates.c  transforms.c  x509.c  xmldsig.c  xmlenc.c  xmlsec.c  xmltree.c  xpath.c  xslt.c
DesktopEditor/xmlsec/xmlsec/tests/: README  nss.supp  openssl.supp  testDSig.sh  testEnc.sh  testKeys.sh  testRes.sh  testrun.sh
DesktopEditor/xmlsec/xmlsec/win32/: Makefile.msvc  README.txt  configure.js  libxmlsec.def.src  mycfg.bat
EpubFile/: CEpubFile.h  CEpubFile.pro  CMakeLists.txt
EpubFile/build-Reader-Desktop_x86_windows_msys_pe_32bit-Debug/: Makefile
EpubFile/src/: CBookContentItem.cpp  CBookContentItem.h  CBookInfo.cpp  CBookInfo.h  CBookItem.cpp  CBookItem.h  CBookToc.cpp  CBookToc.h  CEpubFile.cpp  EpubFile_global.h
EpubFile/src/Docx/: CDocxFile.cpp  CDocxFile.h  CElement.cpp  CElement.h  CFileDocument.cpp  CFileDocument.h  CXmlFile.cpp  CXmlFile.h
EpubFile/src/Docx/app/: CAppXml.cpp  CAppXml.h  CProperties.cpp  CProperties.h
EpubFile/src/Docx/contentType/: CContentType.cpp  CContentType.h  CContentTypeXml.cpp  CContentTypeXml.h
EpubFile/src/Docx/core/: CCoreProperties.cpp  CCoreProperties.h  CCoreXml.cpp  CCoreXml.h
EpubFile/src/Docx/docRels/: CDocRelationships.cpp  CDocRelationships.h  CDocRelationshipsXml.cpp  CDocRelationshipsXml.h
EpubFile/src/Docx/document/: CBody.cpp  CBody.h  CDocument.cpp  CDocument.h  CDocumentXml.cpp  CDocumentXml.h  CParagraph.cpp  CParagraph.h  CParagraphProperties.cpp  CParagraphProperties.h  CRun.cpp  CRun.h  CRunProperties.cpp  CRunProperties.h  CSectionProperties.cpp  CSectionProperties.h
EpubFile/src/Docx/fontTable/: CFont.cpp  CFont.h  CFontTable.cpp  CFontTable.h  CFontTableXml.cpp  CFontTableXml.h
EpubFile/src/Docx/hyperlink/: CHyperlink.cpp  CHyperlink.cpp.autosave  CHyperlink.h
EpubFile/src/Docx/rels/: CRelationships.cpp  CRelationships.h  CRelationshipsXml.cpp  CRelationshipsXml.h
EpubFile/src/Docx/sdt/: CSdt.cpp  CSdt.h  CSdtContent.cpp  CSdtContent.h  CSdtEndPr.cpp  CSdtEndPr.h  CSdtPr.cpp  CSdtPr.h
EpubFile/src/Docx/settings/: CSettings.cpp  CSettings.h  CSettingsXml.cpp  CSettingsXml.h
EpubFile/src/Docx/style/: CStyle.cpp  CStyle.h  CStyles.cpp  CStyles.h  CStylesXml.cpp  CStylesXml.h
EpubFile/src/Docx/webSettings/: CWebSettings.cpp  CWebSettings.h  CWebSettingsXml.cpp  CWebSettingsXml.h
EpubFile/test/: main.cpp  test.pro
EpubFile/test/Files/: 1-posledneye-zhelaniye.epub  2-mech-prednaznacheniya.epub  3-krov-elfov.epub  4-chas-prezreniya.epub  5-kreshcheniye-ognem.epub  6-bashnya-lastochki.epub  7-vladychitsa-ozera.epub  8-sezon-groz.epub  BULGAKOV.epub  Harry Potter 1.epub  Robinson Crusoe.epub  TOLSTOY.epub  Tom Sawyer.epub
EpubFile/tests/EpubFiles/: BULGAKOV.epub  TOLSTOY.epub
EpubFile/tests/ReadingXml/: Reader.pro  cepubformat.cpp  cepubformat.h  main.cpp
EpubFile/tests/tempDirectory/: container.xml  content.opf  content0.html  content1.html  content2.html  content3.html  content4.html  content5.html  content6.html  content8.html  content9.html  cover.xhtml  style.css  toc.ncx  unicode_fonts.css
(+40077 files in other folders)
